# PearDrop

./: .flutter-plugins-dependencies  .gitignore  .gitmodules  CODEOWNERS  README.md
.dart_tool/: package_config.json
.dart_tool/flutter_build/12252f8430e177e5930e0b4a46f5f1af/: .filecache  (+2 more)
.github/: peardrop-app-drive.yaml  peardrop-app-integration.yaml  protocol_test.yml
.github/workflows/: capi_test.yml  dart_test.yml  protocol_test.yml
ble_flutter/: README.md  pubspec.yaml
ble_flutter/android/: build.gradle  settings.gradle
ble_flutter/example/: README.md  pubspec.yaml
ble_flutter/ios/: ble_flutter.podspec
ble_flutter/lib/: ble_flutter.dart
ble_flutter/test/: ble_flutter_test.dart
docs/: CNAME  index.html
docs/css/: main.css
docs/js/: main.js
lib/: main_desktop.dart
peardop-flutter/: .flutter-plugins-dependencies
peardop-flutter/.dart_tool/: package_config.json
peardrop_capi/: .gitignore  Cargo.toml  android-build-linux.sh  android-build-macos.sh  android-build-windows.bat  peardrop.h
peardrop_capi/include/: peardrop.h
peardrop_capi/src/: ack.rs  ad.rs  lib.rs  sender.rs
peardrop_capi/test/: CMakeLists.txt
peardrop_capi/test/src/: test_ack.cpp  test_ad.cpp  test_sender.cpp
peardrop_dart/: .gitignore  .metadata  ApprovalFlowTooltip.js.download  BlobBuilder.js.download  CommentSection.css  README.md  libpeardrop_capi.dylib  pubspec.yaml
peardrop_dart/android/: build.gradle  settings.gradle
peardrop_dart/example/: .metadata  README.md  pubspec.yaml
peardrop_dart/ios/: libpeardrop.podspec  libpeardrop_capi.dylib  peardrop.podspec
peardrop_dart/lib/: libpeardrop.dart  peardrop.dart
peardrop_dart/macos/: libpeardrop.podspec  libpeardrop_capi.dylib
peardrop_dart/test/: ackpacket_test.dart  acktype_test.dart  adpacket_test.dart  peardrop_test.dart  senderpacket_test.dart
peardrop_flutter/: .flutter-plugins-dependencies  .gitignore  README.md  analysis_options.yaml  circle.dart  pubspec.yaml
peardrop_flutter/.dart_tool/: package_config.json
peardrop_flutter/android/: .project
peardrop_flutter/lib/: main.dart  main_desktop.dart
peardrop_flutter/linux/: window_configuration.cc
peardrop_flutter/test/: widget_test.dart
peardrop_flutter/web/: index.html  manifest.json
peardrop_flutter/windows/: AppConfiguration.props  Runner.sln  Runner.vcxproj
peardrop_protocol/: Cargo.toml
peardrop_protocol/.github/workflows/: protocol_test.yml
peardrop_protocol/src/: ack.rs  ad.rs  lib.rs  sender.rs
shabby-poc/: Cargo.toml
shabby-poc/src/: ack.rs  ad.rs  extension.rs  lib.rs  sender.rs
website/: index.html
website/css/: main.css
(+113 files in other folders)
