[package]
name = "peardrop_capi"
version = "0.1.0"
authors = ["anirudhb <anirudhb@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peardrop_protocol = { path = "../peardrop_protocol" }
num-traits = "0.2.12"
