[package]
name = "peardrop_protocol"
version = "0.1.0"
authors = ["anire <anirudhb@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ux = "0.1.3"
thiserror = "1.0.19"
byteorder = "1.3.4"
num-traits = "0.2.11"
num-derive = "0.3.0"
