[package]
name = "shabby-poc"
version = "0.1.0"
authors = ["anirudhb <anirudhb@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
ux = "0.1.3"
num-traits = "0.2.11"
num-derive = "0.3.0"
thiserror = "1.0.18"
argh = "0.1.3"
rand = "0.7.3"
