[package]
name = "shabby-poc"
version = "0.1.0"
authors = ["anirudhb <anirudhb@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.3"
rand = "0.7.3"
peardrop_protocol = { path = "../peardrop_protocol" }
